<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/photo_2022_10_23_21_16_22_2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="4dp"
            android:text="@string/account_username" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="4dp"
            android:textColor="@color/gray"
            android:lineHeight="@android:dimen/thumbnail_height"
            android:clickable="true"
            android:text="@string/edit" />

        <Button
            android:id="@+id/button"
            android:layout_width="270dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/logout" />
    </LinearLayout>
</FrameLayout>
