<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/product_image_description"
            android:src="@mipmap/ic_launcher"
            android:padding="6dp"/>


        <TextView
            android:id="@+id/product_name_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:clickable="true"/>

        <TextView
            android:id="@+id/product_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/warning"
            android:textAlignment="center"
            android:clickable="true"
            android:padding="6dp"/>

        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:textSize="11sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_product"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>

