<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    tools:context=".FragmentDetailsProduct">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:stretchColumns="1, 2">

        <ImageView
            android:id="@+id/product_detail_image"
            android:layout_width="match_parent"
            android:contentDescription="@string/product_image_description"
            android:layout_height="280dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/product_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:padding="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">
            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_category"/>
            <TextView
                android:id="@+id/product_detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="-10dp"
                android:textStyle="bold" />

        </LinearLayout>
        <TextView
            android:id="@+id/product_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/warning"
            android:layout_marginLeft="6dp"
            android:padding="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <Button
                android:id="@+id/product_detail_button_addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addToCart2" />

            <TextView
                android:id="@+id/detail_qte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/product_quantity_label"
                android:layout_marginLeft="18dp"/>

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/product_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp" />




    </LinearLayout>

</FrameLayout>