<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cart_product_image"
            android:layout_width="match_parent"
            android:contentDescription="@string/product_image_description"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:padding="4dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cart_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/cart_product_price"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:textSize="15sp"
                android:textColor="@color/warning"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/qte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginLeft="12dp"
                    android:text="@string/product_quantity_label" />

                <EditText
                    android:id="@+id/cart_product_qte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:enabled="false"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/cart_btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="8dp"
                    android:layout_weight="5"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>